<resources>
    <string name="app_name">Treasure Hunt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="optional">Optional</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirmation">Confirmation</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_zipcode">ZIP Code</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_sexe">Sexe</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_password_length_short">This password is too short</string>
    <string name="error_invalid_password_length_long">This password is too long</string>
    <string name="error_invalid_password_regexp">
        The password must contain a capital letter, a lower letter and a number
    </string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="error_invalid_username_length_short">This username is too short</string>
    <string name="error_invalid_username_length_long">This username is too long</string>
    <string name="error_invalid_username_regexp">
        The username must contain only letters and numbers
    </string>

    <string name="error_invalid_password_confirmation_equal"> The confirmation is not equal to the password </string>

    <string name="error_invalid_email_regexp">This email address is invalid</string>

    <string name="error_invalid_phone_regexp">The phone format must be XXXXXXXXXX</string>

    <string name="error_invalid_zipcode_regexp">The zipcode format must be XXXXX</string>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Strings related to CreateHuntActivity -->
    <string name="createHunt">Create</string>
    <string name="cancelHunt">Cancel</string>
    <string name="huntListTitle">Hunts</string>
    <string name="newHuntTitle">New Hunt</string>

    <!-- Strings related to ProfileActivity -->
    <string name="dummy_username">Skull Man</string>
    <string name="dummy_name">Skeleton Idiot</string>
    <string name="dummy_phone">0101010101</string>
    <string name="dummy_zipcode">10110</string>
    <string name="dummy_email">skull_man@wilycorp.meg</string>

    <!-- Strings related to profile menu -->
    <string name="profile_created_hunts"> Created hunts </string>
    <string name="profile_current_hunts"> Current hunts </string>
    <string name="profile_view_profile"> View profile </string>
    <string name="profile_view_friends"> View friends </string>
    <string name="profile_view_messages"> View messages </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
